# WebRust

./: Cargo.toml  database.rs  index.html  index.scss
src/: components.rs  database.rs  leds.json  main.rs
