[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
yew = {version="0.20.0", features =["csr"]}
yew-hooks = "0.2.0"
gloo= "0.6.1"
